# agent-corp

./: .gitignore  CLAUDE.md  README.md  agent-corp-context-brief.md  compose.yaml
apps/chat/backend/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
apps/chat/backend/app/: __init__.py  clock.py  config.py  db.py  ids.py  main.py  schemas.py
apps/chat/backend/app/api/: __init__.py  broadcasts.py  feed.py  health.py  notifications.py
apps/chat/backend/app/authn/: jwks.py  principal.py
apps/chat/backend/app/core/: errors.py  logging.py  security.py
apps/chat/backend/app/mcp/: surface.py
apps/chat/backend/app/security/: hygiene.py  sanitize.py
apps/chat/backend/app/services/: backup.py  deep_links.py  feed.py  health.py  ntfy.py  outbox.py  ratelimit.py  repo.py
apps/chat/backend/app/tests/: conftest.py  test_api_and_dedup.py  test_auth_scoping.py  test_contract_conformance.py  test_deep_links.py  test_feed_sse.py  test_mcp_surface.py  test_ratelimit.py  test_sanitize_hygiene.py  test_security_fixes.py
apps/cmdb/backend/: pyproject.toml  requirements.txt
apps/cmdb/backend/app/: __init__.py  chainlog.py  clock.py  config.py  db.py  ids.py  main.py
apps/cmdb/backend/app/api/: __init__.py  decision.py  hosts.py  logs.py  registries.py  write.py
apps/cmdb/backend/app/authn/: dpop.py  jwks.py  jwt.py  livecheck.py  principal.py
apps/cmdb/backend/app/core/: errors.py  logging.py  security.py
apps/cmdb/backend/app/mcp/: surface.py
apps/cmdb/backend/app/policy/: __init__.py  classifier.py  constants.py  evaluate.py  gitrepo.py  models.py  schema.py  store.py  windows.py
apps/cmdb/backend/app/services/: change_control.py  decision.py  edits.py  escalations.py  inventory.py  wazuh.py
apps/cmdb/backend/app/tests/: conftest.py  test_authz_mcp.py  test_boot_integrity.py  test_change_control.py  test_classifier.py  test_contract_conformance.py  test_push_before_effect.py  test_verdict_evaluate.py  test_windows.py
apps/cmdb/backend/app/verdict/: signer.py
apps/gateway/backend/: .gitignore  BUILD_NOTES.md  pyproject.toml  requirements.txt
apps/gateway/backend/app/: __init__.py  clock.py  config.py  db.py  ids.py  main.py
apps/gateway/backend/app/anchor/: pusher.py
apps/pdf-reader/backend/: pyproject.toml  requirements-dev.txt  requirements.txt
apps/pdf-reader/backend/app/: __init__.py
apps/pdf-reader/backend/tests/: conftest.py  test_crypto.py  test_engine_ops.py  test_finalize_structure.py  test_health.py  test_jobs_harness.py
platform/agent-runtime/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
platform/agent-runtime/config/: models.yaml  runtime.yaml
platform/agent-runtime/config/personas/: adversarial-reviewer.yaml  hands-pool.yaml  scrum-master.yaml
platform/agent-runtime/evals/: README.md  planted_flaw_battery.example.yaml
platform/agent-runtime/optimization/: NOTES.md
platform/agent-runtime/planning/: PLAN.md
platform/agent-runtime/research/: RESEARCH.md
platform/agent-runtime/security/: THREAT_MODEL.md
platform/agent-runtime/src/agent_runtime/: __init__.py  __main__.py  api.py  auth_client.py  board_client.py  config.py  custody.py  db.py  drain.py  errors.py  facade.py  heartbeat.py  ids.py  loop.py  notes_client.py  provenance.py  supervisor.py  worker.py
platform/agent-runtime/tests/: conftest.py  test_auth_outage.py  test_board_client.py  test_custody_and_supervisor.py  test_drain_machine.py  test_facade_contract.py  test_heartbeat_contract.py  test_loop_termination.py  test_notes_client.py  test_provenance_gate.py
platform/agent-runtime/ui/: UI_SPEC.md
platform/agent-runtime/verification/: CHECKLIST.md
platform/agent-runtime/web/: ar-app.jsx  index.html
platform/auth/src/: README.md  pyproject.toml
platform/auth/src/auth/: __init__.py  migrate.py  server.py
(+1064 files in other folders)
