[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-runtime"
version = "0.1.0"
description = "The workforce — client half of every guardrail (Critical-infra)."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Deployment-only, not needed for the pure-logic unit tests:
#   mcp        — the Board MCP Streamable-HTTP client (spec 2025-11-25)
#   python-pkcs11 — TPM custody via tpm2-pkcs11 / SoftHSM2
#   model-signing, sigstore, huggingface-hub — the provenance gate verifiers
integration = ["mcp>=1.2", "python-pkcs11>=0.7", "huggingface-hub>=1.1", "model-signing>=1.1"]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
