[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cmdb"
version = "0.1.0"
description = "CMDB — the policy brain (inventory + policy decision point). Critical-infra."
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["app/tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
