[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gateway"
version = "0.1.0"
description = "Gateway — the hands (the ONLY component that executes on hosts). Critical-infra."
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["app/tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
