[project]
name = "pdf-forge"
version = "1.0.0"
description = "pdf-forge — privacy-first, self-hosted PDF workshop (backend)"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 120
target-version = "py313"
